# my-code

./: .gitignore  .gitmodules  CMakeFunctions.cmake  CMakeLists_Example.txt  Makefile  README  README.md  configure.ac  cs_5??_notes.org  cs_652_notes.org  example_configure.ac  language_thoughts.org  math_notes.org  math_test_rewrite.org  math_test_rewrite_pub.org  math_test_rewrite_pub.tex
C++/: cons.h  empty  (+5 more)
C_util/: C_util.c  C_util.h  Makefile  Makefile.am  TAGS  atomic.h  bptree.c  bptree.h  btree.c  btree.h  byte_svector.c  byte_svector.h  cblas_util.h  configure.ac  cons.c  debug.h  fib_heap.c  fib_heap.h  hash.c  hash.h  heap.c  heap.h  libtool  memset_N.S  rbtree.c  rbtree.h  sorting.c  sorting.s  sorting03.s  stream.c  stream.h  string_buf.c  string_buf.h  svector.c  svector.h  svector_template.c  tree  unicode.c  unicode.h  util.h  (+2 more)
C_util/.libs/: libcutil.lai  libcutil.so.0  libcutil.so.0.0.0
C_util/test/: Makefile.am  array  debug_opt  opt  rand_arr.pl  run_tests.pl  strings  test_btree  test_btree.c  test_fib_heap  test_fib_heap.c  test_generic_map.c  test_hash  test_hash.c  test_rand.c  test_rbtree  test_rbtree.c  test_sort  test_sort.c  test_string.c  test_trie.c
C_util/test/.deps/: test_hash.Po  test_sort.Po
C_util/test/.libs/: lt-test_hash  test_hash  test_sort
Iam-Project-2/Rewrite/: configure.ac  fdtd.c  fdtd.h  fdtd.h.gch  fdtd_consts.c  fdtd_consts.h  fdtd_io.c  fdtd_io.h  temp.s  xmalloc.h
SciLisp_Mk2/: Makefile  Makefile.am  Scilisp  TAGS  configure.ac  libtool
SciLisp_Mk2/doc/: Makefile  Makefile.am  SciLisp.info  SciLisp.texi
SciLisp_Mk2/src/: Makefile  Makefile.am  TAGS  alloc.h  c_macros.h  common.h  config.h  config.h.in  cons.c  cons.h  frontend.c  types.h
SciLisp_Mk2/src/.deps/: frontend.Po
SciLisp_Mk2/src/.libs/: Scilisp  libscilisp.lai  libscilisp.so.0  libscilisp.so.0.0.0
SciLisp_Mk2/tests/: Makefile  Makefile.am  TAGS  cons_test.c  scilisp_check.c  scilisp_check.h  scilisp_test.sh  scilisp_test.sh.in  test_util.h
SciLisp_Mk2/tests/.deps/: scilisp_check-scilisp_check.Po
cs758/asn5/: Makefile  Makefile.am  config.h  config.h.in  config.status  configure  configure.ac  spell_check.c  temp.s  trie.c  trie.h
cs758/asn5/.deps/: spell_check-spell_check.Po  spell_check-trie.Po
cs758/asn5/autom4te.cache/: output.1  requests  traces.0  traces.1  traces.3
cs758/asst-10/: Makefile  Makefile.am  config.h  config.h.in  config.status  configure  configure.scan  heap.c  map-route-greedy  map-route-reference  map_route.c  nearest-nodes  problems.org  random-routes  roadmap.c  roadmap.h  routes_10  system.h  util.c  util.h
cs758/asst-10/.deps/: map_route-heap.Po  map_route-map_route.Po  map_route-roadmap.Po  map_route-system.Po  map_route-util.Po  map_route_debug-heap.Po  map_route_debug-map_route.Po  map_route_debug-roadmap.Po  map_route_debug-system.Po  map_route_debug-util.Po
cs758/asst-10/asst-10/: makefile  system.c
cs758/asst-10/autom4te.cache/: output.1  requests  traces.0  traces.1
cs758/asst-11/: Makefile  Makefile.am  chris.flow  config.h  config.h.in  config.status  configure  configure.ac  flow  flow-harness.py  flow-reference  flow_debug  flow_net.c  flow_net.h  flow_net_revised.c  flowreference  graph2.flow  main.c  problems.org  simple.flow  util.h
cs758/asst-11/.deps/: flow-flow_net.Po  flow-main.Po  flow-util.Po  flow_debug-flow_net.Po  flow_debug-main.Po  flow_debug-util.Po
cs758/asst-11/autom4te.cache/: output.0  requests  traces.0  traces.1
cs758/asst-11/skeleton/: chris.flow  flow_net.c
cs758/asst-7/: Makefile  Makefile.am  config.h  config.h.in  config.status  configure  configure.ac  cyk.c  cyk.h  harness.py  lexer.c  lexer.h  my-parser.c  my_parser.c  my_parser.h  parser  parser.c  parser.h  parser_debug  parser_reference  rdp.c  sentence  string_buf.c  string_buf.h
cs758/asst-7/.deps/: my_parser-lexer.Po  my_parser-my_parser.Po  my_parser-rdp.Po  parser-cyk.Po  parser-parser.Po  parser-rdp.Po  parser_debug-cyk.Po  parser_debug-parser.Po  parser_debug-rdp.Po
cs758/asst-7/autom4te.cache/: output.0  requests  traces.0  traces.1
cs758/asst-9/: Makefile  Makefile.am  cachegrind.out.17482  callgrind.out.17407  code.ps  config.h  config.h.in  config.status  configure  configure.ac  configure.scan  graph.c  graph.h  heap.c  multithreaded_mergesort.c  old_spanning_tree.c  problems.org  problems.ps  sort.c  spanning_tree.c  temp2  tree  tree-dfs-reference  tree-reference  tree_debug  union_find.c
cs758/asst-9/.deps/: tree-graph.Po  tree-heap.Po  tree-sort.Po  tree-spanning_tree.Po  tree_debug-graph.Po  tree_debug-heap.Po  tree_debug-sort.Po  tree_debug-spanning_tree.Po  tree_prof-graph.Po  tree_prof-heap.Po  tree_prof-sort.Po  tree_prof-spanning_tree.Po
cs758/asst-9/autom4te.cache/: output.0  requests  traces.0  traces.1
cs758/asst-9/images/: KingsSmall.pgm  Kingsbury.pgm  head  head.pgm  head2  head2.pgm  ruml.pgm
cs758/asst-9/skeleton/: graph.c  graph.h  makefile  spanning_tree.c
life/: CMakeLists.txt  Makefile  life  life.c  life.h  life_ncurses.c  life_sdl.c  life_sdl.h  life_sdl_eventloop.c  life_sdl_text.c  life_sdl_work.c  sdl_test.c  sdl_util.c  sdl_util.h  util.h
opengl/: C_util.c  C_util.h  Makefile  Makefile.am  basic_loop.c  basic_loop.h  basic_loop_test.c  basic_test  basic_test.c  basic_test.s  cblas_aux.c  cblas_util.h  common.h  configure.ac  context.c  context.h  context_test.c  cube  cube.c  gl_shape.c  gl_types.h  gl_util.c  gl_util.h  hex_rgba_to_float.h  libtool  matrix_transform_template.c  matrix_transforms.c  matrix_transforms.h  matrix_transforms_template.c
opengl/cs770/: Shape.cpp  Triangle.h  basicGLSL.cpp  cblas_util.hpp  cs770  gl770.h  glfw_init.c  makeShaders.cpp  scene.hpp
opengl/cs770/basicGLSL/: Makefile  Shape.h  Triangle.cpp  basicGLSL.cpp  checkGL.h  flat.fsh  gl770.h  makeShaders.cpp  mat.h  modifyVersion.txt  p0.cpp  transform.vsh  vertex.vsh
opengl/cs770/include/: gl770.h  glsl770.h  vec.h
opengl/cs770/old/: cs770  flat.fsh  transform.vsh
opengl/m4/: macros.m4
opengl/python/: Shape.c  Shape.py  Shape.pyx  gl_buffer.py  scene.py  shape.py
(+1120 files in other folders)
