check_PROGRAMS = test/test_sort test/test_hash test/test_rbtree\
	test/test_btree test/test_fib_heap
# There has got to be a better way to do this
test_test_sort_LDADD = libcutil.la
test_test_sort_CPPFLAGS = $(AM_CPPFLAGS) -Og -g3
test_test_hash_LDADD = libcutil.la
test_test_hash_CPPFLAGS = $(AM_CPPFLAGS) -Og -g3
test_test_rbtree_LDADD = libcutil.la
test_test_rbtree_CPPFLAGS = $(AM_CPPFLAGS) -Og -g3
test_test_btree_LDADD = libcutil.la
test_test_btree_CPPFLAGS = $(AM_CPPFLAGS) -Og -g3
test_test_fib_heap_LDADD = libcutil.la
test_test_fib_heap_CPPFLAGS = $(AM_CPPFLAGS) -Og -g3 
